<resources>
    <string name="app_name">Calculadora</string>

    <string name="btn_zero">0</string>
    <string name="btn_dot">.</string>
    <string name="btn_equal">=</string>
    <string name="btn_plus">+</string>

    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_minus">-</string>

    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_multiply">x</string>

    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_divide">/</string>

    <string name="btn_clean">C</string>

    <string name="regex_calculator">([0-9]*\.*%1$s[0-9]*)|([0-9]*\.*%2$s[0-9]*)</string>
</resources>